==> FreeRTOS/Lab-Project-FreeRTOS-FAT/portable/STM32F4xx/ff_sddisk.c <==
#include <stdlib.h>
#include <string.h>
#include <stdarg.h>
#include <stdio.h>
#include "FreeRTOS.h"
#include "task.h"
#include "semphr.h"
#include "portmacro.h"
#include "ff_sddisk.h"
#include "ff_sys.h"
#include "stm32f4xx_hal.h"
#define sdSIGNATURE                          0x41404342UL
#define sdHUNDRED_64_BIT                     ( 100ull )
#define sdBYTES_PER_MB                       ( 1024ull * 1024ull )
#define sdSECTORS_PER_MB                     ( sdBYTES_PER_MB / 512ull )
#define sdIOMAN_MEM_SIZE                     4096
#define SD_DMAx_Tx_CHANNEL                   DMA_CHANNEL_4
#define SD_DMAx_Rx_CHANNEL                   DMA_CHANNEL_4
#define SD_DMAx_Tx_STREAM                    DMA2_Stream6
#define SD_DMAx_Rx_STREAM                    DMA2_Stream3
#define SD_DMAx_Tx_IRQn                      DMA2_Stream6_IRQn
#define SD_DMAx_Rx_IRQn                      DMA2_Stream3_IRQn
#define __DMAx_TxRx_CLK_ENABLE               __DMA2_CLK_ENABLE
#define configSDIO_DMA_INTERRUPT_PRIORITY    ( configLIBRARY_MAX_SYSCALL_INTERRUPT_PRIORITY )
    #define sdMAX_TIME_TICKS    pdMS_TO_TICKS( 2000UL )
    #define sdCARD_DETECT_DEBOUNCE_TIME_MS    ( 5000 )
    #define sdARRAY_SIZE( x )    ( int ) ( sizeof( x ) / sizeof( x )[ 0 ] )

static int32_t prvFFRead( uint8_t * pucBuffer,
                          uint32_t ulSectorNumber,
                          uint32_t ulSectorCount,
                          FF_Disk_t * pxDisk )
{
    int32_t lReturnCode = FF_ERR_IOMAN_OUT_OF_BOUNDS_READ | FF_ERRFLAG;

    if( ( pxDisk != NULL ) &&
        ( xSDCardStatus == pdPASS ) &&
        ( pxDisk->ulSignature == sdSIGNATURE ) &&
        ( pxDisk->xStatus.bIsInitialised != pdFALSE ) &&
        ( ulSectorNumber < pxDisk->ulNumberOfSectors ) &&
        ( ( pxDisk->ulNumberOfSectors - ulSectorNumber ) >= ulSectorCount ) )
    {
        uint64_t ullReadAddr;
        HAL_SD_ErrorTypedef sd_result;

        ullReadAddr = 512ull * ( uint64_t ) ulSectorNumber;

        #if ( SDIO_USES_DMA == 0 )
            {
                sd_result = HAL_SD_ReadBlocks( &xSDHandle, ( uint32_t * ) pucBuffer, ullReadAddr, 512ul, ulSectorCount );
            }
        #else
            {
                if( ( ( ( size_t ) pucBuffer ) & ( sizeof( size_t ) - 1 ) ) == 0 )
                {
                    /* The buffer is word-aligned, call DMA read directly. */
                    sd_result = HAL_SD_ReadBlocks_DMA( &xSDHandle, ( uint32_t * ) pucBuffer, ullReadAddr, 512ul, ulSectorCount );

                    if( sd_result == SD_OK )
                    {
                        sd_result = HAL_SD_CheckReadOperation( &xSDHandle, sdMAX_TIME_TICKS );
                    }
                }
                else
                {
                    uint32_t ulSector;
                    uint8_t * pucDMABuffer = ffconfigMALLOC( 512ul );

                    /* The buffer is NOT word-aligned, copy first to an aligned buffer. */
                    if( pucDMABuffer != NULL )
                    {
                        sd_result = SD_OK;

                        for( ulSector = 0; ulSector < ulSectorCount; ulSector++ )
                        {
                            ullReadAddr = 512ull * ( ( uint64_t ) ulSectorNumber + ( uint64_t ) ulSector );
                            sd_result = HAL_SD_ReadBlocks_DMA( &xSDHandle, ( uint32_t * ) pucDMABuffer, ullReadAddr, 512ul, 1 );

                            if( sd_result == SD_OK )
                            {
                                sd_result = HAL_SD_CheckReadOperation( &xSDHandle, sdMAX_TIME_TICKS );

                                if( sd_result != SD_OK )
                                {
                                    break;
                                }

                                memcpy( pucBuffer + 512ul * ulSector, pucDMABuffer, 512ul );
                            }
                        }

                        ffconfigFREE( pucDMABuffer );
                    }
                    else
                    {
                        sd_result = SD_INVALID_PARAMETER;
                    }
                }
            }
        #endif /* SDIO_USES_DMA */

        if( sd_result == SD_OK )
        {
            lReturnCode = 0L;
        }
        else
        {
            /* Some error occurred. */
            FF_PRINTF( "prvFFRead: %lu: %u (%s)\n", ulSectorNumber, sd_result, prvSDCodePrintable( sd_result ) );
        }
    }
    else
    {
        /* Make sure no random data is in the returned buffer. */
        memset( ( void * ) pucBuffer, '\0', ulSectorCount * 512UL );

        if( pxDisk->xStatus.bIsInitialised != pdFALSE )
        {
            FF_PRINTF( "prvFFRead: warning: %lu + %lu > %lu\n", ulSectorNumber, ulSectorCount, pxDisk->ulNumberOfSectors );
        }
    }

    return lReturnCode;
}

static int32_t prvFFWrite( uint8_t * pucBuffer,
                           uint32_t ulSectorNumber,
                           uint32_t ulSectorCount,
                           FF_Disk_t * pxDisk )
{
    int32_t lReturnCode = FF_ERR_IOMAN_OUT_OF_BOUNDS_READ | FF_ERRFLAG;

    if( ( pxDisk != NULL ) &&
        ( xSDCardStatus == pdPASS ) &&
        ( pxDisk->ulSignature == sdSIGNATURE ) &&
        ( pxDisk->xStatus.bIsInitialised != pdFALSE ) &&
        ( ulSectorNumber < pxDisk->ulNumberOfSectors ) &&
        ( ( pxDisk->ulNumberOfSectors - ulSectorNumber ) >= ulSectorCount ) )
    {
        HAL_SD_ErrorTypedef sd_result;
        uint64_t ullWriteAddr;
        ullWriteAddr = 512ull * ulSectorNumber;

        #if ( SDIO_USES_DMA == 0 )
            {
                sd_result = HAL_SD_WriteBlocks( &xSDHandle, ( uint32_t * ) pucBuffer, ullWriteAddr, 512ul, ulSectorCount );
            }
        #else
            {
                if( ( ( ( size_t ) pucBuffer ) & ( sizeof( size_t ) - 1 ) ) == 0 )
                {
                    /* The buffer is word-aligned, call DMA reawrite directly. */
                    sd_result = HAL_SD_WriteBlocks_DMA( &xSDHandle, ( uint32_t * ) pucBuffer, ullWriteAddr, 512ul, ulSectorCount );

                    if( sd_result == SD_OK )
                    {
                        sd_result = HAL_SD_CheckWriteOperation( &xSDHandle, sdMAX_TIME_TICKS );
                    }
                }
                else
                {
                    uint32_t ulSector;
                    uint8_t * pucDMABuffer = ffconfigMALLOC( 512ul );

                    /* The buffer is NOT word-aligned, read to an aligned buffer and then
                     * copy the data to the user provided buffer. */
                    if( pucDMABuffer != NULL )
                    {
                        sd_result = SD_OK;

                        for( ulSector = 0; ulSector < ulSectorCount; ulSector++ )
                        {
                            memcpy( pucDMABuffer, pucBuffer + 512ul * ulSector, 512ul );
                            ullWriteAddr = 512ull * ( ulSectorNumber + ulSector );
                            sd_result = HAL_SD_WriteBlocks_DMA( &xSDHandle, ( uint32_t * ) pucDMABuffer, ullWriteAddr, 512ul, 1 );

                            if( sd_result == SD_OK )
                            {
                                sd_result = HAL_SD_CheckWriteOperation( &xSDHandle, sdMAX_TIME_TICKS );

                                if( sd_result != SD_OK )
                                {
                                    break;
                                }
                            }
                        }

                        ffconfigFREE( pucDMABuffer );
                    }
                    else
                    {
                        sd_result = SD_INVALID_PARAMETER;
                    }
                }
            }
        #endif /* SDIO_USES_DMA */

        if( sd_result == SD_OK )
        {
            /* No errors. */
            lReturnCode = 0L;
        }
        else
        {
            FF_PRINTF( "prvFFWrite: %lu: %u (%s)\n", ulSectorNumber, sd_result, prvSDCodePrintable( sd_result ) );
        }
    }
    else
    {
        if( pxDisk->xStatus.bIsInitialised != pdFALSE )
        {
            FF_PRINTF( "prvFFWrite: warning: %lu + %lu > %lu\n", ulSectorNumber, ulSectorCount, pxDisk->ulNumberOfSectors );
        }
    }

    return lReturnCode;
}

FF_Disk_t * FF_SDDiskInit( const char * pcName )
{
    FF_Error_t xFFError;
    BaseType_t xPartitionNumber = 0;
    FF_CreationParameters_t xParameters;
    FF_Disk_t * pxDisk;

    xSDCardStatus = prvSDMMCInit( 0 );

    if( xSDCardStatus != pdPASS )
    {
        FF_PRINTF( "FF_SDDiskInit: prvSDMMCInit failed\n" );
        pxDisk = NULL;
    }
    else
    {
        pxDisk = ( FF_Disk_t * ) ffconfigMALLOC( sizeof( *pxDisk ) );

        if( pxDisk == NULL )
        {
            FF_PRINTF( "FF_SDDiskInit: Malloc failed\n" );
        }
        else
        {
            /* Initialise the created disk structure. */
            memset( pxDisk, '\0', sizeof( *pxDisk ) );

            pxDisk->ulNumberOfSectors = xSDCardInfo.CardCapacity / 512;

            if( xPlusFATMutex == NULL )
            {
                xPlusFATMutex = xSemaphoreCreateRecursiveMutex();
            }

            pxDisk->ulSignature = sdSIGNATURE;

            if( xPlusFATMutex != NULL )
            {
                memset( &xParameters, '\0', sizeof( xParameters ) );
                xParameters.ulMemorySize = sdIOMAN_MEM_SIZE;
                xParameters.ulSectorSize = 512;
                xParameters.fnWriteBlocks = prvFFWrite;
                xParameters.fnReadBlocks = prvFFRead;
                xParameters.pxDisk = pxDisk;

                /* prvFFRead()/prvFFWrite() are not re-entrant and must be
                 * protected with the use of a semaphore. */
                xParameters.xBlockDeviceIsReentrant = pdFALSE;

                /* The semaphore will be used to protect critical sections in
                 * the +FAT driver, and also to avoid concurrent calls to
                 * prvFFRead()/prvFFWrite() from different tasks. */
                xParameters.pvSemaphore = ( void * ) xPlusFATMutex;

                pxDisk->pxIOManager = FF_CreateIOManger( &xParameters, &xFFError );

                if( pxDisk->pxIOManager == NULL )
                {
                    FF_PRINTF( "FF_SDDiskInit: FF_CreateIOManger: %s\n", ( const char * ) FF_GetErrMessage( xFFError ) );
                    FF_SDDiskDelete( pxDisk );
                    pxDisk = NULL;
                }
                else
                {
                    pxDisk->xStatus.bIsInitialised = pdTRUE;
                    pxDisk->xStatus.bPartitionNumber = xPartitionNumber;

                    if( FF_SDDiskMount( pxDisk ) == 0 )
                    {
                        FF_SDDiskDelete( pxDisk );
                        pxDisk = NULL;
                    }
                    else
                    {
                        if( pcName == NULL )
                        {
                            pcName = "/";
                        }

                        FF_FS_Add( pcName, pxDisk );
                        FF_PRINTF( "FF_SDDiskInit: Mounted SD-card as root \"%s\"\n", pcName );
                        FF_SDDiskShowPartition( pxDisk );
                    }
                } /* if( pxDisk->pxIOManager != NULL ) */
            }     /* if( xPlusFATMutex != NULL) */
        }         /* if( pxDisk != NULL ) */
    }             /* if( xSDCardStatus == pdPASS ) */

    return pxDisk;
}

static BaseType_t prvSDMMCInit( BaseType_t xDriveNumber )
{
    /* 'xDriveNumber' not yet in use. */
    ( void ) xDriveNumber;

    if( xSDCardSemaphore == NULL )
    {
        xSDCardSemaphore = xSemaphoreCreateBinary();
    }

    prvSDIO_SD_Init();

    vGPIO_SD_Init( &xSDHandle );

    #if ( SDIO_USES_DMA != 0 )
        {
            prvSDIO_DMA_Init();
        }
    #endif

    int SD_state = SD_OK;

    /* Check if the SD card is plugged in the slot */
    if( prvSDDetect() == pdFALSE )
    {
        FF_PRINTF( "No SD card detected\n" );
        return 0;
    }

    /* When starting up, skip debouncing of the Card Detect signal. */
    xCardDetect.bLastPresent = pdTRUE;
    xCardDetect.bStableSignal = pdTRUE;
    /* Initialise the SDIO device and read the card parameters. */
    SD_state = HAL_SD_Init( &xSDHandle, &xSDCardInfo );
    #if ( BUS_4BITS != 0 )
        {
            if( SD_state == SD_OK )
            {
                HAL_SD_ErrorTypedef rc;

                xSDHandle.Init.BusWide = SDIO_BUS_WIDE_4B;
                rc = HAL_SD_WideBusOperation_Config( &xSDHandle, SDIO_BUS_WIDE_4B );

                if( rc != SD_OK )
                {
                    FF_PRINTF( "HAL_SD_WideBus: %d: %s\n", rc, prvSDCodePrintable( ( uint32_t ) rc ) );
                }
            }
        }
    #endif /* if ( BUS_4BITS != 0 ) */
    FF_PRINTF( "HAL_SD_Init: %d: %s type: %s Capacity: %lu MB\n",
               SD_state,
               prvSDCodePrintable( ( uint32_t ) SD_state ),
               xSDHandle.CardType == HIGH_CAPACITY_SD_CARD ? "SDHC" : "SD",
               xSDCardInfo.CardCapacity / ( 1024 * 1024 ) );

    return SD_state == SD_OK ? 1 : 0;
}

    void SDIO_IRQHandler( void )
    {
        BaseType_t xHigherPriorityTaskWoken = 0;

        HAL_SD_IRQHandler( &xSDHandle );

        if( xSDCardSemaphore != NULL )
        {
            xSemaphoreGiveFromISR( xSDCardSemaphore, &xHigherPriorityTaskWoken );
        }

        portYIELD_FROM_ISR( xHigherPriorityTaskWoken );
    }
